@@ -33,7 +33,7 @@ public class BlockChooser implements Listener {
     }
 
     public void openBlockShop(Player p) {
-        Inventory inv = Bukkit.createInventory(p, 45, ChatColor.DARK_AQUA + "Disguise Selector");
+        Inventory inv = Bukkit.createInventory(p, getShopSize(ShopSettings.blockChoices.size()), ChatColor.DARK_AQUA + "Disguise Selector");
         for (ItemStack stack : ShopSettings.blockChoices) {
             inv.addItem(stack);
         }
@@ -82,6 +82,6 @@ public class BlockChooser implements Listener {
     }
 
     private int getShopSize(int n) {
-        return (int) Math.ceil(n / 9) * 9;
+        return (int) Math.ceil(n / 9.0) * 9;
     }
 }
